3_ingress/pod_helloworld-2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: helloworld-2
  name: helloworld-2
spec:
  containers:
  - image: gcr.io/google-samples/hello-app:2.0
    name: helloworld-2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
