3_ingress/service_helloworld_nodeport-2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: helloworld-2
  name: helloworld-nodeport-2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: helloworld-2
  type: NodePort
status:
  loadBalancer: {}
