3_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-nodeport
          servicePort: 8080
      - path: /hello-2
        backend:
          serviceName: helloworld-nodeport-2
          servicePort: 8080
